# agentic-ai-demo

./: .gitignore  README.md  helpers.py  main_01_basic.py  main_02_python_tool.py  main_03_ext_tool.py  main_04_mcp.py  main_05_ui.py  main_agui.py  pyproject.toml
01_basic/: README.md  main.py
02_custom_tool/: README.md  main.py
03_external_tool/: README.md  main_03_ext_tool.py
04_mcp/: README.md  main.py
05_ag_ui/: README.md  main.py
05_ag_ui/copilot-runtime/: package.json
05_ag_ui/ui/: package-lock.json  package.json
05_ag_ui/ui/src/: index.css
05_basic_ui/: README.md  main.py
05_basic_ui/copilot-runtime/: README.md
05_basic_ui/ui/: package-lock.json  package.json
05_basic_ui/ui/src/: App.tsx  index.css  main.tsx
06_generative_ui/: README.md  main.py
06_generative_ui/copilot-runtime/: README.md  server.ts
06_generative_ui/ui/: package-lock.json  package.json
06_generative_ui/ui/src/: App.css  App.tsx  index.css
06_static_gen_ui/: README.md
06_static_gen_ui/copilot-runtime/: README.md  package-lock.json  tsconfig.json
06_static_gen_ui/ui/: package.json
06_static_gen_ui/ui/src/: App.tsx
06_ui_components/: README.md  agent.py
06_ui_components/ui/: .env.example  .prettierrc.json
07_agentic_ui/: README.md  agent.py  main.py
07_agentic_ui/ui/src/: App.css  App.tsx
07_frontend_actions/: README.md  agent.py
07_frontend_actions/ui/: package-lock.json
07_frontend_actions/ui/src/: index.css
helpers/: __init__.py
ui/: README.md  package-lock.json  package.json
ui/src/app/: layout.tsx  page.tsx
(+7 files in other folders)
