[project]
name = "agentic-ai-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.6.0",
    "pydantic-ai>=1.0.8",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["helpers*"]

[tool.uv]
package = true
